--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,4 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
-@import "./page.css";
 
 :root {
   --background: #ffffff;
@@ -94,6 +93,42 @@ body {
   animation: astroEnter 4s;
 }
 
+.container {
+    height: 100%;
+}
+
+.infoContainer {
+    width: 100%;
+    margin: 0 auto;
+    z-index: 999 !important;
+}
+
+.textShadow {
+    text-shadow: 1px 2px 2px rgba(0, 0, 0, .4);
+}
+
+.forecastContainer {
+    height: 400px;
+    background-color: #F8F9FA;
+    border-radius: 5px;
+}
+
+.slide {
+    padding: 1rem 3rem;
+}
+
+.display {
+    font-size: 2rem;
+}
+
+.itemDisplayInfo {
+    background-image: linear-gradient(to bottom left,  transparent, rgba(145, 173, 196) 80%) ;
+    border-radius: 10px;
+    padding: .625rem;
+    display: flex;
+    justify-content: space-between;
+}
+
 @keyframes rightMovingCloud {
   0% {
     right: 130%;
@@ -152,4 +187,10 @@ body {
   html {
     color-scheme: dark;
   }
+}
+
+@media screen and (min-width: 1024) {
+    .infoContainer {
+        width: 50%;
+    }
 }
