--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -148,6 +148,15 @@ img {
   animation: celestialBodyLeave 4s;
 }
 
+.errorContainer{
+  width: 100%;
+  height: 100%;
+}
+
+.errorContainer img {
+  width: 12rem;
+}
+
 
 @keyframes celestialBodyEnter {
   from {
